--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "src/*": ["./src/*"],
+      "app/*": ["./src/app/*"],
       "assets/*": ["./src/assets/*"],
       "data/*": ["./src/data/*"],
       "features/*": ["./src/features/*"],
