Add textbox, thunk for dynamic textbox messages

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
       "src/*": ["./src/*"],
       "app/*": ["./src/app/*"],
       "assets/*": ["./src/assets/*"],
+      "constants/*": ["./src/constants/*"],
       "data/*": ["./src/data/*"],
       "features/*": ["./src/features/*"],
       "hooks/*": ["./src/hooks/*"],
