MUI and some interface styling

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,7 @@
       "data/*": ["./src/data/*"],
       "features/*": ["./src/features/*"],
       "hooks/*": ["./src/hooks/*"],
+      "interface/*": ["./src/interface/*"],
       "styles/*": ["./src/styles/*"],
       "util/*": ["./src/util/*"]
     },
